--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sequelize-demo",
+  "name": "2001-officehours-sequelize-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon database"
   },
   "keywords": [],
   "author": "",
